# bitcoin-fiddling

./: .gitignore  CMakeLists.txt  LICENSE
src/executables/SendMoney/: main.cpp
src/executables/test/: main.cpp
src/executables/testProgram/: main.cpp
